<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易悦RSS阅读器</string>
    <string name="action_settings">Settings</string>

    <string-array name="feed_category">
        <item>新闻资讯</item>
        <item>科学技术</item>
        <item>读书文娱</item>
        <item>体育赛事</item>
        <item>动漫游戏</item>
        <item>名人博客</item>
        <item>外语资讯</item>
        <item>娱乐八卦</item>
        <item>其他分类</item>
    </string-array>
    
    <string-array name="feed_category_en">
        <item>news</item>
        <item>science</item>
        <item>culture</item>
        <item>sports</item>
        <item>manga</item>
        <item>blog</item>
        <item>english</item>
        <item>fun</item>
    </string-array>
    
     <string-array name="login_accounts">
         <item>新浪微博登陆</item>
         <item>QQ空间登陆</item>
    </string-array>
     
    <string name="ani_time">250</string>
	<string name="ani_time2">500</string>
	<string name="ani_timestartof">150</string>
	
	<string name="no_network">请检查网络设置</string>
	<string name="network_exception">网络异常，请稍后再试</string>
	<string name="no_update">暂无更新</string>
	
	<string-array name="save_days">
	    <item>3天</item>
	    <item>4天</item>
	    <item>5天</item>
	    <item>6天</item>
	    <item>7天</item>
	    <item>8天</item>
	    <item>9天</item>
	    <item>10天</item>
	</string-array>
	
	<string name="minuteago">分钟前</string>
    <string name="hourago">小时前</string>
    <string name="dayago">天前</string>
	
    <string name="bg_switch_success">设置成功</string>

    <!--订阅中心-->
    <string name="subscribe_rss_center">订阅中心</string>

    <!--公共界面-->
    <string name="please_input_content">请输入内容，谢谢！</string>
    <string name="submit">提交</string>
    <string name="please_check_network">请检查网络</string>
    <string name="complete">完成</string>
    <string name="add">新增</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_failed">发布失败</string>

    <!--添加rss源页面-->
    <string name="add_feed_title">自定义RSS源</string>
    <string name="add_feed_name">名称</string>
    <string name="add_feed_address">地址</string>
    <string name="add_feed_name_hint">请输入源名称</string>
    <string name="add_feed_address_hint">请输入源地址</string>
    <string name="add_feed_category">分类</string>
    <string name="add_feed_category_hint">添加分类</string>
    <string name="add_feed_fail">抱歉，请重新检查该rss</string>
    <string name="add_feed_success">添加成功!</string>
    <string name="add_feed_please_input_info">对应信息不能为空</string>

    <!--评论界面-->
    <string name="comment_list_title">评论列表</string>

    <!--设置界面-->
    <string name="submit_suggestion">意见反馈</string>
    <string name="feedback_to_email">changan_luo@163.com</string>
    <string name="feedback_title">用户反馈</string>
    <string name="about_me">关于我们</string>

    <!--登录界面-->
    <string name="login_failed">登录失败</string>
    <string name="login_success">登陆成功,欢迎%s</string>

    <!--收藏界面-->
    <string name="favorite_title">收藏列表</string>
    
    <!--设置壁纸-->
    <string name="set_homepage_background">设置首页壁纸</string>

    <!--阅读界面-->
    <string name="share_content_format">我在易悦阅读器上看到一篇不错的文章:%1$s,你也来看看吧%2$s</string>
    <string name="read_title">阅读界面</string>

    <!--个人中心-->
    <string name="personal_info_title">个人中心</string>
    <string name="personal_info_id">用户ID</string>
    <string name="personal_info_nickname">昵称</string>
    <string name="personal_info_sex">性别</string>
    <string name="personal_info_sex_male">男</string>
    <string name="personal_info_sex_female">女</string>
    <string name="personal_info_area">地区</string>
    <string name="personal_info_login">点击登录</string>
    <string name="personal_info_logout">退出登录</string>
    <string name="personal_info_third_login">支持第三方登录</string>
    <string name="personal_info_logout_success">注销成功</string>
    <string name="personal_info_login_first">注销失败,请先登录</string>
    <string name="personal_info_logout_first">登录失败,请先注销</string>
    <string name="personal_info_logout_failed">注销失败,错误码是%s</string>

</resources>
