<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_line_item_height"
        android:paddingLeft="@dimen/default_content_padding"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/tv_rss_name_left"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/size_64dp"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_23dp"
            android:text="@string/add_feed_name"
            />
        <EditText
            android:id="@+id/et_rss_name_right"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/tv_rss_name_left"
            android:layout_marginRight="@dimen/default_margin"
            android:singleLine="true"
            android:background="@color/white"
            android:textColor="@color/black_alpha80"
            android:textSize="@dimen/text_size_15"
            android:cursorVisible="true"
            android:hint="@string/add_feed_name_hint"
            android:textColorHint="@color/black_alpha50"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <include
        layout="@layout/view_horizontal_line_1px_black_alpha15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_line_item_height"
        android:paddingLeft="@dimen/default_content_padding"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/tv_rss_address_left"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/size_64dp"
            android:background="@color/white"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_23dp"
            android:text="@string/add_feed_address"
            />
        <EditText
            android:id="@+id/et_rss_address_right"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/tv_rss_address_left"
            android:layout_marginRight="@dimen/default_margin"
            android:singleLine="true"
            android:background="@color/white"
            android:textColor="@color/black_alpha80"
            android:textSize="@dimen/text_size_15"
            android:cursorVisible="true"
            android:hint="@string/add_feed_address_hint"
            android:textColorHint="@color/black_alpha50"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <include
        layout="@layout/view_horizontal_line_1px_black_alpha15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_line_item_height"
        android:paddingLeft="@dimen/default_content_padding"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/tv_rss_category_left"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/size_64dp"
            android:background="@color/white"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_23dp"
            android:text="@string/add_feed_category"
            />
        <Spinner
            android:id="@+id/spinner_rss_category_right"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/tv_rss_category_left"
            android:layout_marginRight="@dimen/default_margin"
            android:singleLine="true"
            android:background="@color/white"
            android:textColor="@color/black_alpha80"
            android:textSize="@dimen/text_size_15"
            android:cursorVisible="true"
            android:hint="@string/add_feed_category_hint"
            android:textColorHint="@color/black_alpha50"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_loading_layout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/light_black"
        android:layout_gravity="center"
        android:padding="5dp"
        android:alpha="0.5"
        android:visibility="gone"
        >
        <ProgressBar
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="加载中……" />
    </RelativeLayout>


</LinearLayout>