<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="@dimen/default_content_padding"
              android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54dp"
    >
        <TextView
            android:id="@+id/tv_edit_detail_left_id"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/size_64dp"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_23dp"
            android:text="@string/personal_info_id"
        />
        <TextView
            android:id="@+id/tv_edit_detail_right_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/tv_edit_detail_left_id"
            android:background="@color/white"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15"
            android:layout_centerVertical="true"
        />
    </RelativeLayout>

    <include
        layout="@layout/view_horizontal_line_1px_black_alpha15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54dp"
    >
        <TextView
            android:id="@+id/et_edit_detail_left_nickname"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/size_64dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_23dp"
            android:text="@string/personal_info_nickname"
        />
        <TextView
            android:id="@+id/tv_edit_detail_right_nickname"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/et_edit_detail_left_nickname"
            android:layout_marginRight="@dimen/default_margin"
            android:singleLine="true"
            android:background="@color/white"
            android:textColor="@color/black_alpha80"
            android:textSize="@dimen/text_size_15"
            android:cursorVisible="true"
            android:textColorHint="@color/black_alpha50"
            android:layout_centerVertical="true"
        />
    </RelativeLayout>
    <include
        layout="@layout/view_horizontal_line_1px_black_alpha15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54dp"
    >
        <TextView
            android:id="@+id/et_edit_detail_left_gender"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/size_64dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_23dp"
            android:text="@string/personal_info_sex"
        />
        <RadioGroup
            android:id="@+id/personal_info_sex_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/et_edit_detail_left_gender"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
        >
            <RadioButton
                android:id="@+id/personal_info_sex_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/selector_scf_commodity_select_cb"
                android:drawablePadding="@dimen/size_8dp"
                android:background="@null"
                android:text="@string/personal_info_sex_male"
                android:textColor="@color/personal_info_hint"
                android:textSize="@dimen/text_size_15"
                android:button="@null"
            />
            <RadioButton
                android:id="@+id/personal_info_sex_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/selector_scf_commodity_select_cb"
                android:drawablePadding="@dimen/size_8dp"
                android:background="@null"
                android:layout_marginLeft="@dimen/size_84dp"
                android:textColor="@color/personal_info_hint"
                android:textSize="@dimen/text_size_15"
                android:text="@string/personal_info_sex_female"
                android:button="@null"
            />
        </RadioGroup>
    </RelativeLayout>

    <include
        layout="@layout/view_horizontal_line_1px_black_alpha15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54dp"
    >
        <TextView
            android:id="@+id/et_edit_detail_left_area"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/size_64dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_23dp"
            android:text="@string/personal_info_area"
        />
        <TextView
            android:id="@+id/tv_edit_detail_right_area"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/et_edit_detail_left_area"
            android:layout_marginRight="@dimen/default_margin"
            android:singleLine="true"
            android:background="@color/white"
            android:textColor="@color/black_alpha80"
            android:textSize="@dimen/text_size_15"
            android:cursorVisible="true"
            android:textColorHint="@color/black_alpha50"
            android:layout_centerVertical="true"
        />

    </RelativeLayout>
</LinearLayout>